--- a/src/main/webapp/staticfiles/search.html
+++ b/src/main/webapp/staticfiles/search.html
@@ -42,8 +42,8 @@
 					    <a class="url"
 						style="padding-left: 0px;" href="{{object.link}}">http://localhost</a>
 					 	</span>
-					 	<div class="col-xs-12 description " style=" height:80px;padding-left:0px;">
-					 	<p class="ellipsis">  <small>{{object.date}} crawled </small>{{object.description}}
+					 	<div class="col-xs-12 description " style="padding-left:0px;">
+					 	<p style="max-height:5.1em;line-height:1.3em" changdotdotdot>  <small>{{object.date}} crawled </small>{{object.description}}
 					</p></div></div>
 				</div>
 			</div>
@@ -54,11 +54,13 @@
 
 		<script src="/staticfiles/js/jquery-2.2.2.min.js" type="text/javascript"></script>
 		<script src="/staticfiles/js/jquery.dotdotdot.js" type="text/javascript"></script>
+		
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
 		<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
 		<script src="/staticfiles/js/searchService.js"></script>
 		<script src="/staticfiles/js/searchController.js"></script>
+		<script src="/staticfiles/js/angular-dotdotdot.js" type="text/javascript"></script>
 		<script>
 		</script>
 
