--- a/src/main/webapp/staticfiles/cover.html
+++ b/src/main/webapp/staticfiles/cover.html
@@ -16,7 +16,7 @@
 		<link href="/staticfiles/css/cover.css" rel="stylesheet">
 	</head>
 
-	<body>
+	<body ng-app="coverModule" ng-controller="coverController as controller">
 
 		<div class="site-wrapper">
 
@@ -31,8 +31,8 @@
 						<a href="#" class="btn btn-lg btn-secondary">Learn more</a>
 						</p>-->
 					</div><!--col-xs-6 col-xs-offset-3 col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4-->
-					<input type="text" class="form-control" placeholder="EX) Java programming">
-					<input class="btn btn-default searchbt" type="submit" value="Search">
+					<input type="text" class="form-control" placeholder="EX) Java programming" ng-keydown="$event.which === 13 && controller.go()"  focus-me="true" ng-model="controller.searchString">
+					<input class="btn btn-default searchbt" type="submit" value="Search" ng-click="controller.go()">
 					<input class="btn btn-info formatbt" type="submit" value="Custom">
 				</div>
 
@@ -51,5 +51,6 @@
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
 		<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.2.1.js"></script>
+		<script src="/staticfiles/js/cover.js"></script>
 	</body>
 </html>
