--- a/src/main/webapp/staticfiles/search.html
+++ b/src/main/webapp/staticfiles/search.html
@@ -34,7 +34,7 @@
 			<div class="row">
 				<div class="col-xs-8 content-wrapper-outer" ng-Cloak ng-repeat="object in controller.collection">
 					<div class="content-wrapper container-fluid">
-						<span class="col-xs-12 title" style="padding-left:0px;">{{object.title}}</span>
+						<span class="col-xs-12 title" style="padding-left:0px;"><a href="{{object.downloadlink}}">{{object.title}}</a></span>
 						<span class="col-xs-12" style="padding-left:0px;">
 						    <a class="url text-warning" style="padding-left: 0px;" href="{{object.link}}">{{object.link}}</a>
 						 	</span>
@@ -51,6 +51,7 @@
 
 		<script src="/staticfiles/js/jquery-2.2.2.min.js" type="text/javascript"></script>
 		<script src="/staticfiles/js/jquery.dotdotdot.js" type="text/javascript"></script>
+		<script src="/staticfiles/js/jquery.base64.js" type="text/javascript"></script>
 		
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
